--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,3 +11,7 @@ services:
       calculator:
 
           class: AppBundle\Services\calculatorServices
+
+      string:
+
+          class: AppBundle\Services\stringServices
